--- a/api-index.html
+++ b/api-index.html
@@ -101,7 +101,9 @@ Shortcuts:<br />
   <h2 id="E"><span id="section-head">E</span></h2>
   <pre>
 <span id="section-content"> <a href="calx-api.html#calx/enqueue-barrier">enqueue-barrier</a><span id="line-content">              function      calx               Ensures that all previously enqueued commands will...
+</span></span><span id="section-content"> <a href="calx-api.html#calx/enqueue-copy">enqueue-copy</a><span id="line-content">                 function      calx               Enqueues a copy from a subset of the source onto t...
 </span></span><span id="section-content"> <a href="calx-api.html#calx/enqueue-marker">enqueue-marker</a><span id="line-content">               function      calx               Returns an event which represents the progress of ...
+</span></span><span id="section-content"> <a href="calx-api.html#calx/enqueue-overwrite">enqueue-overwrite</a><span id="line-content">            function      calx               Asynchronously copies a buffer from local memory o...
 </span></span><span id="section-content"> <a href="calx-api.html#calx/enqueue-read">enqueue-read</a><span id="line-content">                 function      calx               Asynchronously copies a subset of the buffer into ...
 </span></span><span id="section-content"> <a href="calx-api.html#calx/enqueue-wait-for">enqueue-wait-for</a><span id="line-content">             function      calx               Enqueues a barrier which will halt execution until...
 </span></span></pre>
